--- a/src/ScrapeM/ScrapeM.fsproj
+++ b/src/ScrapeM/ScrapeM.fsproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>ScrapeM</RootNamespace>
     <AssemblyName>ScrapeM</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
     <Name>ScrapeM</Name>
     <TargetFrameworkProfile />
@@ -64,12 +64,23 @@
     <None Include="paket.references" />
     <None Include="paket.template" />
     <Content Include="App.config" />
-    <None Include="..\..\Sample-Seq-1.fsx" />
-    <None Include="..\..\Sample-State-1.fsx" />
-    <None Include="..\..\Sample-StateT-Seq-1.fsx" />
-    <None Include="..\..\ScrapeM.fsx" />
+    <None Include="..\..\Sample-Seq-1.fsx">
+      <Link>Sample-Seq-1.fsx</Link>
+    </None>
+    <None Include="..\..\Sample-State-1.fsx">
+      <Link>Sample-State-1.fsx</Link>
+    </None>
+    <None Include="..\..\Sample-StateT-Seq-1.fsx">
+      <Link>Sample-StateT-Seq-1.fsx</Link>
+    </None>
+    <None Include="..\..\ScrapeM.fsx">
+      <Link>ScrapeM.fsx</Link>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Core, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FsControl">
       <HintPath>..\..\packages\FsControl\lib\net40\FsControl.dll</HintPath>
     </Reference>
@@ -85,9 +96,6 @@
     <Reference Include="Hopac.Core">
       <HintPath>..\..\packages\Hopac\lib\net45\Hopac.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Hopac.Platform">
-      <HintPath>..\..\packages\Hopac\lib\net45\Hopac.Platform.dll</HintPath>
-    </Reference>
     <Reference Include="HttpFs">
       <HintPath>..\..\packages\Http.fs\lib\net40\HttpFs.dll</HintPath>
     </Reference>
@@ -95,6 +103,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v2.0' Or $(TargetFrameworkVersion) == 'v3.0' Or $(TargetFrameworkVersion) == 'v3.5')">
@@ -106,15 +115,7 @@
         </Reference>
       </ItemGroup>
     </When>
-    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.0' Or $(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3')">
-      <ItemGroup>
-        <Reference Include="FSharp.Core">
-          <HintPath>..\..\packages\FSharp.Core\lib\net40\FSharp.Core.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
-      </ItemGroup>
-    </When>
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.0' Or $(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3')" />
     <When Condition="($(TargetFrameworkIdentifier) == 'MonoAndroid') Or ($(TargetFrameworkIdentifier) == 'MonoTouch') Or ($(TargetFrameworkIdentifier) == 'Xamarin.iOS')">
       <ItemGroup>
         <Reference Include="FSharp.Core">
